Exampled of One Hot Encoding

--- a/MLR_on_Spark.ipynb
+++ b/MLR_on_Spark.ipynb
@@ -644,11 +644,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examples of One Hot Encoding"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the one hot encoder class\n",
+    "from pyspark.ml.feature import OneHotEncoderEstimator\n",
+    "\n",
+    "# Create an instance of the one hot encoder\n",
+    "onehot = OneHotEncoderEstimator(inputCols=['org_idx'],\\\n",
+    " outputCols=['org_dummy'])\n",
+    "\n",
+    "# Apply the one hot encoder to the flights data\n",
+    "onehot = onehot.fit(flights)\n",
+    "flights_onehot = onehot.transform(flights)\n",
+    "\n",
+    "# Check the results\n",
+    "flights_onehot.select('org', 'org_idx', 'org_dummy').distinct().\\\n",
+    "sort('org_idx').show()"
+   ]
   }
  ],
  "metadata": {
