Exampled of Creating Buckets for Continuous

--- a/MLR_on_Spark.ipynb
+++ b/MLR_on_Spark.ipynb
@@ -814,6 +814,37 @@
     "flights_onehot.select('depart', 'depart_bucket', 'depart_dummy').\\\n",
     "show(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.regression import LinearRegression\n",
+    "from pyspark.ml.evaluation import RegressionEvaluator\n",
+    "\n",
+    "# Fit linear regression model to training data\n",
+    "regression = LinearRegression(labelCol='duration').fit(flights_train)\n",
+    "\n",
+    "# Make predictions on testing data\n",
+    "predictions = regression.transform(flights_test)\n",
+    "\n",
+    "# Calculate the RMSE on testing data\n",
+    "rmse = RegressionEvaluator(labelCol='duration').evaluate(predictions)\n",
+    "print(\"The test RMSE is\", rmse)\n",
+    "#rmse = evaluator.setMetricName(\"rmse\").evaluate(predictions)\n",
+    "# Look at the model coefficients\n",
+    "coeffs = regression.coefficients\n",
+    "print(coeffs)"
+   ]
   }
  ],
  "metadata": {
