--- a/MLR_on_Spark.ipynb
+++ b/MLR_on_Spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,22 +21,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34mAutoML551a6fc0840\u001b[m\u001b[m              Untitled.ipynb\r\n",
-      "Context_v_Session.ipynb        house_data.csv\r\n",
-      "MLR_in_R.pdf                   influencial_outliers_notes.pdf\r\n",
-      "README.md\r\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'/Users/dmitrymikhaylov/Documents/code/spark/sparky_spark'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "!ls"
+    "import os\n",
+    "\n",
+    "os.getcwd()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "url = \"https://raw.githubusercontent.com/jkropko/DS-6001/master/localdata/anes_example.csv\"\n",
+    "anes = pd.read_csv(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>caseid</th>\n",
+       "      <th>turnout12</th>\n",
+       "      <th>turnout12b</th>\n",
+       "      <th>vote12</th>\n",
+       "      <th>percent16</th>\n",
+       "      <th>meet</th>\n",
+       "      <th>givefut</th>\n",
+       "      <th>info</th>\n",
+       "      <th>march</th>\n",
+       "      <th>sign</th>\n",
+       "      <th>...</th>\n",
+       "      <th>votereg</th>\n",
+       "      <th>pid3</th>\n",
+       "      <th>pid7</th>\n",
+       "      <th>ideo5</th>\n",
+       "      <th>newsint</th>\n",
+       "      <th>pew_bornagain</th>\n",
+       "      <th>pew_churatd</th>\n",
+       "      <th>religpew</th>\n",
+       "      <th>religpew_t</th>\n",
+       "      <th>ever_vs_12mo_rand</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>__NA__</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>50</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>__NA__</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2 rows × 168 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   caseid  turnout12  turnout12b  vote12  percent16  meet  givefut  info  \\\n",
+       "0     1.0          1         NaN     2.0        100     1        3     4   \n",
+       "1     2.0          2         NaN     NaN         50     4        5     4   \n",
+       "\n",
+       "   march  sign  ...  votereg  pid3  pid7  ideo5  newsint  pew_bornagain  \\\n",
+       "0      1     2  ...        1     1   1.0      6        1              2   \n",
+       "1      2     2  ...        2     3   4.0      2        3              2   \n",
+       "\n",
+       "   pew_churatd  religpew  religpew_t  ever_vs_12mo_rand  \n",
+       "0            6       NaN      __NA__                  2  \n",
+       "1            4       2.0      __NA__                  1  \n",
+       "\n",
+       "[2 rows x 168 columns]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "anes.head(2)"
    ]
   },
   {
