moving into ensembels with spark

--- a/ENS_with_Spark.ipynb
+++ b/ENS_with_Spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,24 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Import the classes required\n",
+    "from pyspark.ml.classification import RandomForestClassifier, GBTClassifier\n",
+    "from pyspark.ml.evaluation import BinaryClassificationEvaluator\n",
+    "\n",
+    "# Create model objects and train on training data\n",
+    "tree = RandomForestClassifier().fit(flights_train)\n",
+    "gbt = GBTClassifier().fit(flights_train)\n",
+    "\n",
+    "# Compare AUC on testing data\n",
+    "evaluator = BinaryClassificationEvaluator()\n",
+    "evaluator.evaluate(tree.transform(flights_test))\n",
+    "evaluator.evaluate(gbt.transform(flights_test))\n",
+    "\n",
+    "# Find the number of trees and the relative importance of features\n",
+    "print(gbt.trees)\n",
+    "print(gbt.featureImportances)"
+   ]
   }
  ],
  "metadata": {
