--- a/ENS_with_Spark.ipynb
+++ b/ENS_with_Spark.ipynb
@@ -34,6 +34,52 @@
     "print(gbt.trees)\n",
     "print(gbt.featureImportances)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a random forest classifier\n",
+    "forest = RandomForestClassifier()\n",
+    "\n",
+    "# Create a parameter grid\n",
+    "params = ParamGridBuilder() \\\n",
+    "            .addGrid(forest.featureSubsetStrategy, ['all', 'onethird', 'sqrt', 'log2']) \\\n",
+    "            .addGrid(forest.maxDepth, [2, 5, 10]) \\\n",
+    "            .build()\n",
+    "\n",
+    "# Create a binary classification evaluator\n",
+    "evaluator = BinaryClassificationEvaluator()\n",
+    "\n",
+    "# Create a cross-validator\n",
+    "cv = CrossValidator(estimator=forest, \n",
+    "                    estimatorParamMaps=params, \n",
+    "                    evaluator=evaluator, \n",
+    "                    numFolds=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
