--- a/NLP_with_Spark.ipynb
+++ b/NLP_with_Spark.ipynb
@@ -267,6 +267,190 @@
     "\n",
     "# Accuracy=(TN+TP)/(TN+TP+FN+FP)—proportionofcorrectpredictions."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pyspark.ml.feature import Tokenizer, StopWordsRemover, HashingTF, IDF\n",
+    "\n",
+    "# Break text into tokens at non-word characters\n",
+    "tokenizer = Tokenizer(inputCol='text', outputCol='words')\n",
+    "\n",
+    "# Remove stop words\n",
+    "remover = StopWordsRemover(inputCol='words', outputCol='terms')\n",
+    "\n",
+    "# Apply the hashing trick and transform to TF-IDF\n",
+    "hasher = HashingTF(inputCol=\"terms\", outputCol=\"hash\")\n",
+    "idf = IDF(inputCol=\"hash\", outputCol=\"features\")\n",
+    "\n",
+    "# Create a logistic regression object and add everything to a pipeline\n",
+    "logistic = LogisticRegression()\n",
+    "pipeline = Pipeline(stages=[tokenizer, remover, hasher, idf, logistic])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## regex and NLTK examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tweets = ['This is the best #nlp exercise ive found online! #python',\n",
+    " '#NLP is super fun! <3 #learning',\n",
+    " 'Thanks @datacamp :) #nlp #python']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#nlp', '#python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Tokenizing list of Tweets:\n",
+    "# Import the necessary modules\n",
+    "from nltk.tokenize import regexp_tokenize\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "# Define a regex pattern to find hashtags: pattern1\n",
+    "pattern1 = r\"#\\w+\"\n",
+    "# Use the pattern on the first tweet in the tweets list\n",
+    "hashtags = regexp_tokenize(tweets[0], pattern1)\n",
+    "print(hashtags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#nlp', '#python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "hashtags = regexp_tokenize(tweets[2], pattern1)\n",
+    "print(hashtags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['@datacamp', '#nlp', '#python']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Finding `mentions` symbol in the tweets \n",
+    "#source: https://stackoverflow.com/questions/7150652/regex-valid-twitter-mention\n",
+    "from nltk.tokenize import regexp_tokenize\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "# Write a pattern that matches both mentions (@) and hashtags\n",
+    "pattern2 = r\"([@#]\\w+)\"\n",
+    "# Use the pattern on the last tweet in the tweets list\n",
+    "mentions_hashtags = regexp_tokenize(tweets[-1], pattern2)\n",
+    "print(mentions_hashtags)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['This', 'is', 'the', 'best', '#nlp', 'exercise', 'ive', 'found', 'online', '!', '#python'], ['#NLP', 'is', 'super', 'fun', '!', '<3', '#learning'], ['Thanks', '@datacamp', ':)', '#nlp', '#python']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using list comprehension to tokenize the entire list of tweets, \n",
+    "# instanciate an object for this:\n",
+    "from nltk.tokenize import regexp_tokenize\n",
+    "from nltk.tokenize import TweetTokenizer\n",
+    "# Use the TweetTokenizer to tokenize all tweets into one list\n",
+    "tknzr = TweetTokenizer()\n",
+    "all_tokens = [tknzr.tokenize(t) for t in tweets]\n",
+    "print(all_tokens)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Text preprocessing:\n"
+   ]
   }
  ],
  "metadata": {
