--- a/NLP_with_Spark.ipynb
+++ b/NLP_with_Spark.ipynb
@@ -1556,6 +1556,149 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary(33 unique tokens: ['Saudis', 'The', 'a', 'acknowledge', 'are']...)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# source: https://www.machinelearningplus.com/nlp/gensim-tutorial/\n",
+    "import gensim\n",
+    "from gensim import corpora\n",
+    "from pprint import pprint\n",
+    "\n",
+    "# How to create a dictionary from a list of sentences?\n",
+    "documents = [\"The Saudis are preparing a report that will acknowledge that\", \n",
+    "             \"Saudi journalist Jamal Khashoggi's death was the result of an\", \n",
+    "             \"interrogation that went wrong, one that was intended to lead\", \n",
+    "             \"to his abduction from Turkey, according to two sources.\"]\n",
+    "\n",
+    "documents_2 = [\"One source says the report will likely conclude that\", \n",
+    "                \"the operation was carried out without clearance and\", \n",
+    "                \"transparency and that those involved will be held\", \n",
+    "                \"responsible. One of the sources acknowledged that the\", \n",
+    "                \"report is still being prepared and cautioned that\", \n",
+    "                \"things could change.\"]\n",
+    "\n",
+    "# Tokenize(split) the sentences into words\n",
+    "texts = [[text for text in doc.split()] for doc in documents]\n",
+    "\n",
+    "# Create dictionary\n",
+    "dictionary = corpora.Dictionary(texts)\n",
+    "\n",
+    "# Get information about the dictionary\n",
+    "print(dictionary)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Saudis': 0, 'The': 1, 'a': 2, 'acknowledge': 3, 'are': 4, 'preparing': 5, 'report': 6, 'that': 7, 'will': 8, 'Jamal': 9, \"Khashoggi's\": 10, 'Saudi': 11, 'an': 12, 'death': 13, 'journalist': 14, 'of': 15, 'result': 16, 'the': 17, 'was': 18, 'intended': 19, 'interrogation': 20, 'lead': 21, 'one': 22, 'to': 23, 'went': 24, 'wrong,': 25, 'Turkey,': 26, 'abduction': 27, 'according': 28, 'from': 29, 'his': 30, 'sources.': 31, 'two': 32}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dictionary.token2id)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dictionary.save('dictionary.dict')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dictionary(33 unique tokens: ['Saudis', 'The', 'a', 'acknowledge', 'are']...)\n"
+     ]
+    }
+   ],
+   "source": [
+    "loaded_dict = corpora.Dictionary.load('dictionary.dict')\n",
+    "print(loaded_dict)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Another example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import Dictionary\n",
+    "from gensim.corpora.dictionary import Dictionary\n",
+    "\n",
+    "# Create a Dictionary from the articles: dictionary\n",
+    "dictionary = Dictionary(articles)\n",
+    "\n",
+    "# Select the id for \"computer\": computer_id\n",
+    "computer_id = dictionary.token2id.get(\"computer\")\n",
+    "\n",
+    "# Use computer_id with the dictionary to print the word\n",
+    "print(dictionary.get(computer_id))\n",
+    "\n",
+    "# Create a MmCorpus: corpus\n",
+    "corpus = [dictionary.doc2bow(article) for article in articles]\n",
+    "\n",
+    "# Print the first 10 word ids with their frequency counts from the fifth document\n",
+    "print(corpus[4][:10])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## TF-IDF similar to document specific BOW..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from gensim.models.tfidfmodel import TfidfModel\n",
+    "\n",
+    "# Create a new TfidfModel using the corpus: tfidf\n",
+    "tfidf = TfidfModel(corpus)\n",
+    "\n",
+    "# Calculate the tfidf weights of doc: tfidf_weights\n",
+    "tfidf_weights = tfidf[doc]\n",
+    "\n",
+    "# Print the first five weights\n",
+    "print(tfidf_weights[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
