SpaCy vs NLTK differences in NER types

--- a/NLP_with_Spark.ipynb
+++ b/NLP_with_Spark.ipynb
@@ -1702,7 +1702,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sort the weights from highest to lowest: sorted_tfidf_weights\n",
+    "sorted_tfidf_weights = sorted(tfidf_weights, key=lambda w: w[1], reverse=True)\n",
+    "\n",
+    "# Print the top 5 weighted words\n",
+    "for term_id, weight in sorted_tfidf_weights[:5]:\n",
+    "    print(dictionary.get(term_id), weight)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Named-Entity Recognition (NER) with NLTK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Tokenize the article into sentences: sentences\n",
+    "sentences = nltk.sent_tokenize(article)\n",
+    "\n",
+    "# Tokenize each sentence into words: token_sentences\n",
+    "token_sentences = [word_tokenize(sent) for sent in sentences]\n",
+    "\n",
+    "# Tag each tokenized sentence into parts of speech: pos_sentences\n",
+    "pos_sentences = [nltk.pos_tag(sent) for sent in token_sentences] \n",
+    "\n",
+    "# Create the named entity chunks: chunked_sentences\n",
+    "chunked_sentences = nltk.ne_chunk_sents(pos_sentences, binary=True)\n",
+    "\n",
+    "# Test for stems of the tree with 'NE' tags\n",
+    "for sent in chunked_sentences:\n",
+    "    for chunk in sent:\n",
+    "        if hasattr(chunk, \"label\") and chunk.label() == \"NE\":\n",
+    "            print(chunk)"
+   ]
   }
  ],
  "metadata": {
