curl client url in dash

--- a/NLP_with_Spark.ipynb
+++ b/NLP_with_Spark.ipynb
@@ -1744,23 +1744,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 35,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "4833.333333333333"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "(12*4*1000+10000)/(2+2+4+4)"
+    "## Multilingual NER with `polyglot`"
    ]
   },
   {
